--- a/template.yaml
+++ b/template.yaml
@@ -32,7 +32,7 @@ spec:
       action: http:backstage:request
       input:
         provider: aap
-        path: 'job_templates/9/launch/'
+        path: 'https://demo-aap.apps.shailendra14k.in/api/v2/job_templates/9/launch/'
         baseUrl: 'https://demo-aap.apps.shailendra14k.in/api/v2/'
         method: 'POST'
         body:
