--- a/template.yaml
+++ b/template.yaml
@@ -29,7 +29,7 @@ spec:
     - id: trigger-ansible-job
       name: Launch ARO Deployment Job in AAP
       # This action makes a REST API call to your AAP instance.
-      action: http:backstage:request
+      action: ansible:job:run
       input:
         provider: aap
         path: 'https://demo-aap.apps.shailendra14k.in/api/v2/job_templates/9/launch/'
