--- a/template.yaml
+++ b/template.yaml
@@ -4,6 +4,10 @@ metadata:
   name: create-aro-cluster
   title: Create an Azure Red Hat OpenShift (ARO) Cluster
   description: A self-service template to provision a new ARO cluster using Ansible.
+  tags:
+    - recommended
+    - ansible
+    - collection
 spec:
   owner: platform-team
   type: service
