--- a/template_custom.yaml
+++ b/template_custom.yaml
@@ -7,8 +7,7 @@ metadata:
   tags: ["dotnet", "ai", "indigo", "sbom", "acs"]
 spec:
   type: service
-  # These parameters are used to generate the input form in the frontend, and are
-  # used to gather input data for the execution of the template.
+  owner: IndiGo-cop-team
   parameters:
     - title: Application Information
       required:
