--- a/template.yaml
+++ b/template.yaml
@@ -71,7 +71,7 @@ spec:
       name: Registering Resource
       action: catalog:register
       input:
-        catalogInfoPath: /catalog-info.yaml
+        catalogInfoPath: ${{ steps['create-catalog-info'].output.path }}
 
   # 3. OUTPUT: Link to the newly created resource page
   output:
