--- a/template.yaml
+++ b/template.yaml
@@ -66,6 +66,11 @@ spec:
           spec:
             type: database
             owner: test
+    - id: log-message
+      name: Log PR URL
+      action: debug:log
+      input:
+        message: 'PR url: ${{ steps['create-catalog-info'].output.path }}'
 
     - id: register
       name: Registering Resource
