--- a/template.yaml
+++ b/template.yaml
@@ -70,7 +70,7 @@ spec:
       name: Log PR URL
       action: debug:log
       input:
-        message: 'PR url: ${{ steps['create-catalog-info'].output.path }}'
+        message: ${{ steps['create-catalog-info'].output.path }}
     - id: register
       name: Registering Resource
       action: catalog:register
