--- a/template.yaml
+++ b/template.yaml
@@ -84,6 +84,7 @@ spec:
       name: Registering Resource
       action: catalog:register
       input:
+        repoUrl: ${{ steps['fetch-skeleton'].output.remoteUrl }}
         catalogInfoPath: /catalog-info.yaml
 
   # 3. OUTPUT: Link to the newly created resource page
