--- a/template.yaml
+++ b/template.yaml
@@ -79,13 +79,13 @@ spec:
       name: Log PR URL
       action: debug:log
       input:
-        message: ${{ steps['create-catalog-info'].output.path }}
+        message: ${{ steps['fetch-skeleton'].output.remoteUrl }}
     - id: register
       name: Registering Resource
       action: catalog:register
       input:
         repoUrl: ${{ steps['fetch-skeleton'].output.remoteUrl }}
-        catalogInfoPath: ./provision-vm-skeleton/catalog-info.yaml.njk
+        catalogInfoPath: /catalog-info.yaml
 
   # 3. OUTPUT: Link to the newly created resource page
   output:
