--- a/template.yaml
+++ b/template.yaml
@@ -51,15 +51,15 @@ spec:
         values: # Pass all parameters needed by the .njk files
           vmName: test
           owner: shailendra
-    - id: trigger-ansible-job
-      name: Launch ARO Deployment Job in AAP
+#    - id: trigger-ansible-job
+ #     name: Launch ARO Deployment Job in AAP
       # This action makes a REST API call to your AAP instance.
-      action: rhaap:launch-job-template
-      input:
-        token: ${{ parameters.token }}
-        values:
-          template:
-            id: ${{ parameters.template }}
+  #    action: rhaap:launch-job-template
+   #   input:
+    #    token: ${{ parameters.token }}
+     #   values:
+      #    template:
+       #     id: ${{ parameters.template }}
     - id: create-catalog-info
       name: Create Catalog Info
       action: roadiehq:utils:fs:write # Using the built-in action is sufficient here
@@ -79,7 +79,7 @@ spec:
       name: Log PR URL
       action: debug:log
       input:
-        message: ${{ steps['fetch-skeleton'].output.remoteUrl }}
+        message: ${{ steps['fetch-skeleton'].input.remoteUrl }}
     - id: register
       name: Registering Resource
       action: catalog:register
