--- a/template.yaml
+++ b/template.yaml
@@ -1,4 +1,4 @@
-apiVersion: scaffolder.backstage.io/v1beta3
+eapiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: create-aro-cluster
@@ -79,12 +79,12 @@ spec:
       name: Log PR URL
       action: debug:log
       input:
-        message: ${{ steps['fetch-skeleton'].input.remoteUrl }}
+        message: ${{ steps['fetch-skeleton'].input.url }}
     - id: register
       name: Registering Resource
       action: catalog:register
       input:
-        repoUrl: ${{ steps['fetch-skeleton'].output.remoteUrl }}
+        repoUrl: ${{ steps['fetch-skeleton'].input.url }}
         catalogInfoPath: /catalog-info.yaml
 
   # 3. OUTPUT: Link to the newly created resource page
