--- a/template.yaml
+++ b/template.yaml
@@ -1,4 +1,4 @@
-eapiVersion: scaffolder.backstage.io/v1beta3
+apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: create-aro-cluster
