--- a/template.yaml
+++ b/template.yaml
@@ -79,12 +79,12 @@ spec:
       name: Log PR URL
       action: debug:log
       input:
-        message: ${{ steps['fetch-skeleton'].input.url }}
+        message: The skeleton was fetched from t ----- ${{ steps['fetch-skeleton'].input.url }}
     - id: register
       name: Registering Resource
       action: catalog:register
       input:
-        repoUrl: ${{ steps['fetch-skeleton'].input.url }}
+        repoContentsUrl: ${{ steps['fetch-skeleton'].input.url }}
         catalogInfoPath: /catalog-info.yaml
 
   # 3. OUTPUT: Link to the newly created resource page
